BUG on non mobile version

--- a/css/portfolio/todo-app.css
+++ b/css/portfolio/todo-app.css
@@ -94,14 +94,6 @@ body{
     width: 300px;
 }
 
-.toggle-list-container-on-mobile{
-    z-index: 1;
-    width: 100% !important;
-    margin-left: -1rem !important;
-    margin-top: -1.5rem;
-    transition: margin 300ms ease-in-out;
-}
-
 #todo-profile {
     width: 100%;
     display: flex;
@@ -991,18 +983,27 @@ background:  #e59f47;
         background: #fff;
         flex-direction: column;
         height: 81vh;
+        width: 100% !important;
     } 
+
+    .toggle-list-container-on-mobile{
+        margin-left: -1rem !important;
+        transition: margin 300ms ease-in-out;
+    }
+
     #todos-container {
         grid-template-columns: 1fr;
         padding: 1rem;
         margin-top: -1.5rem;
     }
+
     #todo-col {
         width: auto;
         max-width: 100%;
         margin-left: 0;
         margin-top: 6.5rem;
     }
+    
     #mobile-todo-list-btn{
         display: flex;
         width: 100%;
